# AuthService

./: alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 95319d0ed6c6_init.py
src/: config.py  routers.py  schemas.py
src/database/: connect.py  models.py  queries.py
